# humojibake

./: Cargo.toml
src/: error.rs  language.rs  main.rs  score.rs  utils.rs
src/encodings/: cork.rs  cp1250.rs  cp1252.rs  cp254.rs  cp320.rs  cp437.rs  cp850.rs  cp852.rs  cwi1.rs  cwi2.rs  cwi_1.rs  cwi_2.rs  enterprise_hfont.rs  enterprise_hun.rs  enterprise_plus_hun.rs  ep_hfont.rs  ep_hun.rs  ep_plus_hun.rs  iso646hu.rs  iso88591.rs  iso88592.rs  iso_646_hu.rs  iso_8859_1.rs  iso_8859_2.rs  mac_centeuro.rs  mac_roman.rs  mod.rs  szki.rs  tvc.rs  windows_1250.rs  windows_1252.rs
src/subcommands/: convert_between.rs  convert_encoding.rs  convert_from_utf8.rs  convert_to_utf8.rs  encode_hex.rs  guess_hex.rs  histogram.rs  list.rs  list_encodings.rs  list_languages.rs  mod.rs  search_deltaspace.rs  showcase.rs  supported_encodings.rs  supported_languages.rs
